test-data/error/no-plus-minus-before-tolerance.hltas
version 1
frames
----------|------|------|0.001|-|-|1
target_yaw velocity_avg 1
